# quick_full_duplex

./: .gitignore  CMakeLists.txt  README.md  file-1.txt  file-2.txt
src/: main.cpp
src/core/: config.h  error.h  process.h  procinfo.h  proctype.h  socket_pair.h  socket_type.h  sockets.c  sockets.cpp  sockets.h  worker.h
